@@ -15,7 +15,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
-server/skill_util.c: give a dummy name if skill doesn't have it. Avoids crashing later on :)
+ common/map.c: fix memory leak.
+ server/skill_util.c: give a dummy name if skill doesn't have it. Avoids crashing later on :)
 Ryo 2007-01-14
 
 Apply long standing patch #1382884: change to player wraith race courtesy Anton Oussik.
